# task_manager

./: .coverage  .coveragerc  .gitignore  README.md  auth.py  database.py  locust-report.html  locustfile.py  main.py  models.py  pyproject.toml  schemas.py
htmlcov/: auth_py.html  class_index.html  database_py.html  function_index.html  index.html  main_py.html  models_py.html  schemas_py.html  status.json  z_9b0341f23a4a319f___init___py.html  z_9b0341f23a4a319f_tasks_py.html  z_9b0341f23a4a319f_users_py.html
routers/: tasks.py  users.py
tests/: conftest.py
tests/functional/: test_tasks.py  test_users.py
tests/unit/: test_auth.py  test_database.py  test_schemas.py  test_tasks_helpers.py
